--- a/PoseSetView/PoseSetView.csproj
+++ b/PoseSetView/PoseSetView.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BA446163-509F-4B30-9F0D-201C2A293EC4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>PoseSetView</RootNamespace>
+    <RootNamespace>StudioMeowToon.PoseSetView</RootNamespace>
     <AssemblyName>PoseSetView</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
