--- a/MetaseqPoseToBpyLib/MetaseqPoseToBpyLib.csproj
+++ b/MetaseqPoseToBpyLib/MetaseqPoseToBpyLib.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C723947D-4A99-4D31-A3CF-CF2E618CB1AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MetaseqPoseToBpyCore</RootNamespace>
-    <AssemblyName>MetaseqPoseToBpyCore</AssemblyName>
+    <RootNamespace>MetaseqPoseToBpyLib</RootNamespace>
+    <AssemblyName>MetaseqPoseToBpyLib</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
