--- a/NumPad/NumPad.csproj
+++ b/NumPad/NumPad.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B081665A-3E93-448E-BBEB-460DB5827F31}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>VNumPad</RootNamespace>
-    <AssemblyName>VNumPad</AssemblyName>
+    <RootNamespace>NumPad</RootNamespace>
+    <AssemblyName>NumPad</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
