Rename the project codes. #8

--- a/NumPad/NumPad.csproj
+++ b/NumPad/NumPad.csproj
@@ -80,5 +80,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PadLib\PadLib.csproj">
+      <Project>{b3860461-e256-412c-8a3c-a3e6139aaefe}</Project>
+      <Name>PadLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
