--- a/MetaseqPoseToBpy/PoseToBpy.csproj
+++ b/MetaseqPoseToBpy/PoseToBpy.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MetaseqPoseToBpyLib\MetaseqPoseToBpyLib.csproj" />
+    <ProjectReference Include="..\MetaseqPoseToBpyLib\PoseToBpyLib.csproj" />
   </ItemGroup>
 
 </Project>
