--- a/InvertPose/InvertPose.csproj
+++ b/InvertPose/InvertPose.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InvertPoseLib\InvertPoseLib.csproj" />
+  </ItemGroup>
+
 </Project>
