--- a/InvertPose/InvertPose.csproj
+++ b/InvertPose/InvertPose.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
+    <LangVersion>9</LangVersion>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
