--- a/NumPad/NumPad.csproj
+++ b/NumPad/NumPad.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>NumPad</RootNamespace>
     <AssemblyName>NumPad</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <LangVersion>9</LangVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
