--- a/MqoPoseToBpy/MqoPoseToBpy.csproj
+++ b/MqoPoseToBpy/MqoPoseToBpy.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MetaseqPoseToBpyLib\PoseToBpyLib.csproj" />
+    <ProjectReference Include="..\MqoPoseToBpyLib\MqoPoseToBpyLib.csproj" />
   </ItemGroup>
 
 </Project>
